# Projects_2024-25

./: README.md
Contextual_Autocorrect/: README.md
Contextual_Autocorrect/static/css/: styles.css
Contextual_Autocorrect/static/js/: scripts.js
Contextual_Autocorrect/templates/: index.html
CrowdDetection/: README.md  requirements.txt
Face_recognition_ProjectT/: Requirements.txt  insightface_antelopev2.py
IITH_GPT/: .gitignore  README.md
IITH_GPT/with_UI_and_memory/: package-lock.json  package.json  requirements.txt
IITH_GPT/with_UI_and_memory/IITH_GPT/Agentic_code/: RAG_LLM.py  embed.py  utils.py
IITH_GPT/with_UI_and_memory/IITH_GPT/IITH_GPT.egg-info/: SOURCES.txt
IITH_GPT/with_UI_and_memory/backend/: server.py
IITH_GPT/with_UI_and_memory/src/app/: global.css  page.js
IITH_GPT/with_UI_and_memory/src/lib/: dbConnect.js
MeetSnap/: Readme.md  app.py  dummy  main.py  requirement.txt  video link  video_link.md
Note Ninja/: README.md  arrow-resnet-training.ipynb  main_app.py  ocr_utils.py  prompts.py  pyproject.toml  test.py  tools.py  utils.py
Smart_Campus_Nav/campus_cruise/: pubspec.yaml
Smart_Campus_Nav/campus_cruise/assets/: labels.txt
Smart_Campus_Nav/campus_cruise/lib/: main.dart
Smart_Campus_Nav/campus_cruise/linux/: CMakeLists.txt
Smart_Campus_Nav/campus_cruise/test/: widget_test.dart
Smart_Campus_Nav/campus_cruise/web/: index.html  manifest.json
Smart_Campus_Nav/campus_cruise/windows/: CMakeLists.txt
Style_Transfer/: README.md
Style_Transfer/code/: style_transfer.py
TrafficLightController/: Car_detection.ipynb  routes.xml
(+22 files in other folders)
